openmediavault/manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: openmediavault-ui
  namespace: openmediavault
spec:
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
